# quarre-remote

./: .gitmodules  .qmake.conf  CMakeLists.txt  README.md  main.cpp  quarre-remote-build.pro
quarre-remote/: main.cpp  quarre-remote.pro
quarre-remote/android/: AndroidManifest.xml
quarre-remote/resources/fonts/: fonts.qrc
quarre-remote/resources/qml/: Main.qml  qml.qrc
quarre-remote/resources/qml/application/: ApplicationStates.qml  ApplicationTransitions.qml
quarre-remote/resources/qml/engine/: Gesture.qml  GestureManager.qml  InteractionManager.qml  ModuleManager.qml  SensorManager.qml
quarre-remote/resources/qml/views/: CurrentInteractionView.qml  HeaderView.qml
quarre-remote/source/: audio.hpp  system.cpp  system.hpp
resources/images/: images.qrc
resources/qml/: Main.qml
resources/qml/engine/: Gesture.qml  GestureManager.qml  InteractionManager.qml  ModuleManager.qml  SensorManager.qml
resources/qml/modules/: Default.qml  Idle.qml
resources/qml/views/: NextInteractionView.qml  UpperView.qml
source/: audio.cpp  system.cpp  system.hpp
